factored out common code to tutorial_utils.py

--- a/notebooks/comparative_validation.ipynb
+++ b/notebooks/comparative_validation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dd1f87052927008bed202e20103e5aa50bcc4e557c37d96ca4764b654e3672e9"
+  "signature": "sha256:dc490de48a7d2dd1115840164b711c34e8257aace1b2d6506fe92a4267611015"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -38,12 +38,7 @@
       "In general, it would be useful to create a quality profile from multiple models of a protein to see whether a residue systematically exhibits an unusual geometry, or whether the geometry is an error not observed in other models.\n",
       "\n",
       "In this tutorial, let us see how backbone and sidechain features of residues compare across the multiple copies of \n",
-      "GroEL in <a href=\"http://pdbe.org/1kp8\">PDB entry 1kp8</a> determined in 2003 at resolution of 2&Aring;.\n",
-      "\n",
-      "\n",
-      "Link to [Notebook 2](notebook2.ipynb)\n",
-      "\n",
-      "Link to [ligand notebook](ligand_entries_domains.ipynb)"
+      "GroEL in <a href=\"http://pdbe.org/1kp8\">PDB entry 1kp8</a> determined in 2003 at resolution of 2&Aring;."
      ]
     },
     {
@@ -58,37 +53,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As in other tutorials, let us first set up a few basics like importing a few essential modules, setting up a logger and writing a function to fetch API json to return them as python objects."
+      "Let us run the [tutorial_utils](tutorial_utils.ipynb) notebook to setup API URL, logger, caller utility, etc. Check out that notebook to setup anything differently."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import json, urllib2, logging, sys\n",
-      "\n",
-      "reload(logging)\n",
-      "logging.basicConfig(\n",
-      "    level=logging.DEBUG, stream=sys.stdout,\n",
-      "    format='LOG|%(asctime)s|%(levelname)s  %(message)s', datefmt='%d-%b-%Y %H:%M:%S'\n",
-      ")\n",
-      "\n",
-      "PDBE_API_URL = \"http://wwwdev.ebi.ac.uk/pdbe/api\"\n",
-      "\n",
-      "def get_PDBe_API_data(api_url) :\n",
-      "    num_trials = 3\n",
-      "    for trial_number in range(num_trials) :\n",
-      "        try :\n",
-      "            return json.loads(urllib2.urlopen(api_url).read())\n",
-      "        except Exception, err :\n",
-      "            logging.warn(\"Error fetching PDBe-API data! Trial number %d for call %s.\" % (trial_number, api_url))\n",
-      "            if trial_number == num_trials-1 :\n",
-      "                raise err"
+      "%run 'tutorial_utils.ipynb'"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -128,18 +105,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:11|INFO  PDB entry 1kp8 has 6 types of molecules.\n"
+        "LOG|11-Nov-2014 14:24:38|INFO  PDB entry 1kp8 has 6 types of molecules.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:11|INFO  Molecule no. 1, '60 kDa chaperonin', is a protein modelled in 14 chains A,B,C,D,E,F,G,H,I,J,K,L,M,N.\n"
+        "LOG|11-Nov-2014 14:24:38|INFO  Molecule no. 1, '60 kDa chaperonin', is a protein modelled in 14 chains A,B,C,D,E,F,G,H,I,J,K,L,M,N.\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -159,7 +136,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -181,7 +158,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -212,102 +189,102 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id A has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id A has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id C has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id C has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id B has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id B has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id E has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id E has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id D has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id D has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id G has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id G has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id F has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id F has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id I has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id I has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id H has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id H has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id K has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id K has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id J has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id J has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id M has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id M has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id L has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id L has Rama sidechain validation for 524 residues.\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:05:30|INFO  Chain id N has Rama sidechain validation for 524 residues.\n"
+        "LOG|11-Nov-2014 14:25:33|INFO  Chain id N has Rama sidechain validation for 524 residues.\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -321,7 +298,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now let us write a function which will the residues that have more than one Rama or sidechain state, such that a large majority of chains have the same state."
+      "Now let us write a function which will find the residues that have more than one Rama or sidechain state, such that at least one of the states occurs a majority of times."
      ]
     },
     {
@@ -330,9 +307,12 @@
      "input": [
       "def print_unusual_residues(val_key, major_state_freq) :\n",
       "    for res_id, val_info in  outliers[val_key].items() :\n",
+      "        # not interested in all residues at this index to be in the same state\n",
       "        if len(val_info) == 1 : continue\n",
+      "        # not interested in this residue index if no state occurs at least with required frequency\n",
       "        if not any( [len(val_info[k]) >= major_state_freq for k in val_info] ) :\n",
       "            continue\n",
+      "        # write out the popular state and also those occurring less frequently\n",
       "        val_keys = sorted( val_info.keys(), key = lambda vk:len(val_info[vk]), reverse=True )\n",
       "        state_frequencies = \", \".join([\"%7s\"%k+\":%2d\" % len(val_info[k]) for k in val_keys])\n",
       "        minor_chains_str = \" \".join([\"%s:%s\"%(k,\",\".join(val_info[k])) for k in val_keys[1:]])\n",
@@ -343,7 +323,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -365,60 +345,60 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [PRO  462] has multiple rama states: Favored:12, Allowed: 2 || Unusual chains Allowed:E,L\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [PRO  462] has multiple rama states: Favored:12, Allowed: 2 || Unusual chains Allowed:E,L\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [ILE  342] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:I\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [ILE  342] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:I\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [LEU  222] has multiple rama states: Allowed:12, Favored: 2 || Unusual chains Favored:D,G\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [LEU  222] has multiple rama states: Allowed:12, Favored: 2 || Unusual chains Favored:D,G\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [ALA  383] has multiple rama states: OUTLIER:13, Allowed: 1 || Unusual chains Allowed:A\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [ALA  383] has multiple rama states: OUTLIER:13, Allowed: 1 || Unusual chains Allowed:A\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [THR  497] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:K\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [THR  497] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:K\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [GLU  156] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:E\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [GLU  156] has multiple rama states: Favored:13, Allowed: 1 || Unusual chains Allowed:E\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [ASP  253] has multiple rama states: OUTLIER:12, Allowed: 2 || Unusual chains Allowed:D,N\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [ASP  253] has multiple rama states: OUTLIER:12, Allowed: 2 || Unusual chains Allowed:D,N\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:06:54|INFO  Residue [SER  154] has multiple rama states: Favored:12, Allowed: 2 || Unusual chains Allowed:B,E\n"
+        "LOG|11-Nov-2014 14:30:37|INFO  Residue [SER  154] has multiple rama states: Favored:12, Allowed: 2 || Unusual chains Allowed:B,E\n"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -450,112 +430,112 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [VAL  510] has multiple rota states:       t:13, OUTLIER: 1 || Unusual chains OUTLIER:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [VAL  510] has multiple rota states:       t:13, OUTLIER: 1 || Unusual chains OUTLIER:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ARG   58] has multiple rota states:  mtm-85:13,  mtt180: 1 || Unusual chains mtt180:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ARG   58] has multiple rota states:  mtm-85:13,  mtt180: 1 || Unusual chains mtt180:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ASP   52] has multiple rota states:     t70:13,      t0: 1 || Unusual chains t0:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ASP   52] has multiple rota states:     t70:13,      t0: 1 || Unusual chains t0:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [LYS   75] has multiple rota states: OUTLIER:13,    tttt: 1 || Unusual chains tttt:E\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [LYS   75] has multiple rota states: OUTLIER:13,    tttt: 1 || Unusual chains tttt:E\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [VAL  417] has multiple rota states:       m:13, OUTLIER: 1 || Unusual chains OUTLIER:L\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [VAL  417] has multiple rota states:       m:13, OUTLIER: 1 || Unusual chains OUTLIER:L\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [GLU  130] has multiple rota states:    tp10:13,   mt-10: 1 || Unusual chains mt-10:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [GLU  130] has multiple rota states:    tp10:13,   mt-10: 1 || Unusual chains mt-10:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [VAL  128] has multiple rota states:       t:13,       m: 1 || Unusual chains m:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [VAL  128] has multiple rota states:       t:13,       m: 1 || Unusual chains m:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [GLU  129] has multiple rota states:   mt-10:13,    tp10: 1 || Unusual chains tp10:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [GLU  129] has multiple rota states:   mt-10:13,    tp10: 1 || Unusual chains tp10:B\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ARG  368] has multiple rota states:  mtm180:13,  mtp180: 1 || Unusual chains mtp180:N\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ARG  368] has multiple rota states:  mtm180:13,  mtp180: 1 || Unusual chains mtp180:N\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [MET  514] has multiple rota states:     mtp:13, OUTLIER: 1 || Unusual chains OUTLIER:E\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [MET  514] has multiple rota states:     mtp:13, OUTLIER: 1 || Unusual chains OUTLIER:E\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ARG  231] has multiple rota states:  mtt180:13,  mtp180: 1 || Unusual chains mtp180:J\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ARG  231] has multiple rota states:  mtt180:13,  mtp180: 1 || Unusual chains mtp180:J\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ASP  490] has multiple rota states:    m-20:13,     t70: 1 || Unusual chains t70:E\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ASP  490] has multiple rota states:    m-20:13,     t70: 1 || Unusual chains t70:E\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ASP  334] has multiple rota states:     t70:13,      t0: 1 || Unusual chains t0:D\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ASP  334] has multiple rota states:     t70:13,      t0: 1 || Unusual chains t0:D\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [SER  424] has multiple rota states:       p:13,       m: 1 || Unusual chains m:E\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [SER  424] has multiple rota states:       p:13,       m: 1 || Unusual chains m:E\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [ARG  284] has multiple rota states:  ptt180:13, OUTLIER: 1 || Unusual chains OUTLIER:M\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [ARG  284] has multiple rota states:  ptt180:13, OUTLIER: 1 || Unusual chains OUTLIER:M\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|08-Sep-2014 12:09:06|INFO  Residue [VAL   74] has multiple rota states:       p:13,       t: 1 || Unusual chains t:B\n"
+        "LOG|11-Nov-2014 14:30:54|INFO  Residue [VAL   74] has multiple rota states:       p:13,       t: 1 || Unusual chains t:B\n"
        ]
       }
      ],
@@ -589,7 +569,7 @@
       "        Extend such comparison to other kinds of geometric quality, such as bond lengths, vdW clashes, chirality, etc.\n",
       "    </li>\n",
       "    <li>\n",
-      "        Extend the comparison to include same protein from multiple entries.\n",
+      "        Extend the comparison to include same protein from multiple entries - use <a href='http://wwwdev.ebi.ac.uk/pdbe/entry/search/index'>PDBe search service</a>.\n",
       "    </li>\n",
       "</ul>"
      ]
