Reorganising the repository

--- a/REST_API/notebooks/basic101.ipynb
+++ b/REST_API/notebooks/basic101.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6cba23c45530d67cfac72f1d835caf8d3b7735ed5085e24c238ca2adf327e85b"
+  "signature": "sha256:66ebda9b30904fc77e764fff651ad51826f4d557051cc401af25aabcc99c12c4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -177,6 +177,14 @@
       "print(entries[\"1cbs\"][0][\"experimental_method\"])\n",
       "print(entries[\"1cbs\"][0][\"entry_authors\"])"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
