--- a/search_interface/notebooks/search_facets.ipynb
+++ b/search_interface/notebooks/search_facets.ipynb
@@ -28,7 +28,7 @@
      "metadata": {},
      "source": [
       "In [search_introduction](search_introduction.ipynb), we saw how basic selectors can be progressively added to a Solr query to find entries of interest.<br>\n",
-      "Now we will see how facetting, grouping and pivoting can be used to find interesting facts about your favourite protein."
+      "Now we will see how facetting, grouping and pivoting can be used to find interesting facts about your favorite protein."
      ]
     },
     {
