--- a/REST_API/notebooks/comparative_validation.ipynb
+++ b/REST_API/notebooks/comparative_validation.ipynb
@@ -569,7 +569,7 @@
       "        Extend such comparison to other kinds of geometric quality, such as bond lengths, vdW clashes, chirality, etc.\n",
       "    </li>\n",
       "    <li>\n",
-      "        Extend the comparison to include same protein from multiple entries - use <a href='http://wwwdev.ebi.ac.uk/pdbe/entry/search/index'>PDBe search service</a>.\n",
+      "        Extend the comparison to include same protein from multiple entries - use <a href='http://www.ebi.ac.uk/pdbe/entry/search/index'>PDBe search service</a>.\n",
       "    </li>\n",
       "</ul>"
      ]
