--- a/REST_API/notebooks/tutorial_utils.ipynb
+++ b/REST_API/notebooks/tutorial_utils.ipynb
@@ -60,7 +60,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "PDBE_API_URL = \"http://wwwdev.ebi.ac.uk/pdbe/api\""
+      "PDBE_API_URL = \"http://www.ebi.ac.uk/pdbe/api\""
      ],
      "language": "python",
      "metadata": {},
@@ -73,7 +73,7 @@
      "source": [
       "At the time of writing this notebook (Nov 2014), the API was not released on www. So let us use the wwwdev instance, otherwise just comment out the line above.\n",
       "\n",
-      "Browse the API documentation interactively at <code>PDBE_API_URL + \"/doc\"</code>, i.e. http://wwwdev.ebi.ac.uk/pdbe/api/doc"
+      "Browse the API documentation interactively at <code>PDBE_API_URL + \"/doc\"</code>, i.e. http://www.ebi.ac.uk/pdbe/api/doc"
      ]
     },
     {
