--- a/REST_API/notebooks/pdb_entry_publications.ipynb
+++ b/REST_API/notebooks/pdb_entry_publications.ipynb
@@ -62,7 +62,7 @@
      "metadata": {},
      "source": [
       "There are two calls for entry publications - /pdb/entry/publications and /pdb/entry/related_publications.\n",
-      "Check them out in the <a href='http://wwwdev.ebi.ac.uk/pdbe/api/doc'>interactive documentation explorer</a> of the API.\n",
+      "Check them out in the <a href='http://www.ebi.ac.uk/pdbe/api/doc'>interactive documentation explorer</a> of the API.\n",
       "\n",
       "The first call provides articles associated with the entry directly, i.e. the ones which depositor provided.\n",
       "\n",
@@ -73,7 +73,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this example, we will use entries deposited by 'Kleywegt' - I have copied Kleywegt's PDB ids using the <a href='http://wwwdev.ebi.ac.uk/pdbe/entry/search/index'>PDBe search service</a>. There are 39 as of August 2014. These can be obtained programatically too, see search_introduction notebook to know more."
+      "In this example, we will use entries deposited by 'Kleywegt' - I have copied Kleywegt's PDB ids using the <a href='http://www.ebi.ac.uk/pdbe/entry/search/index'>PDBe search service</a>. There are 39 as of August 2014. These can be obtained programatically too, see search_introduction notebook to know more."
      ]
     },
     {
@@ -255,21 +255,21 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 0 for call http://wwwdev.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
+        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 0 for call http://www.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 1 for call http://wwwdev.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
+        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 1 for call http://www.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 2 for call http://wwwdev.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
+        "LOG|11-Nov-2014 14:16:40|WARNING  Error fetching PDBe-API data! Trial number 2 for call http://www.ebi.ac.uk/pdbe/api/pdb/entry/related_publications/2cds\n"
        ]
       },
       {
